@@ -19,11 +19,13 @@ lib/Brackup/Chunker/MP3.pm
 lib/Brackup/CompositeChunk.pm
 lib/Brackup/Config.pm
 lib/Brackup/ConfigSection.pm
+lib/Brackup/Decrypt.pm
+lib/Brackup/DecryptedFile.pm
 lib/Brackup/Dict/SQLite.pm
 lib/Brackup/DigestCache.pm
 lib/Brackup/File.pm
-lib/Brackup/GPGProcess.pm
 lib/Brackup/GPGProcManager.pm
+lib/Brackup/GPGProcess.pm
 lib/Brackup/InventoryDatabase.pm
 lib/Brackup/Manual/Overview.pod
 lib/Brackup/Metafile.pm
